# actnet

./: README.md  activism-network-design.md  technical-implementation.md
core/: Cargo.toml  DEVELOPMENT.md
core/crates/app-core/: Cargo.toml
core/crates/crypto/: Cargo.toml
core/crates/crypto/src/: error.rs  groups.rs  identity.rs  lib.rs  prekeys.rs  session.rs
core/crates/crypto/tests/: session_tests.rs
core/crates/federation/: Cargo.toml
core/crates/net/: Cargo.toml
core/crates/net/src/: lib.rs
core/crates/project-sdk/: Cargo.toml
core/crates/relay/: Cargo.toml
core/crates/server/: Cargo.toml
core/crates/store/: Cargo.toml
core/crates/store/src/: account.rs  db.rs  error.rs  groups.rs  lib.rs  messages.rs  prekeys.rs  schema.rs  session.rs
core/crates/store/tests/: integration.rs  store_tests.rs
core/crates/test-utils/: Cargo.toml
core/crates/test-utils/src/: lib.rs
core/crates/types/: Cargo.toml
core/crates/types/src/: lib.rs
docs/: 01-design.md  02-technical-implementation.md  03-core-api-sketch.md
